table of contents, IDs, ijcai20 paper

--- a/cover letter/resubmission.tex
+++ b/cover letter/resubmission.tex
@@ -18,7 +18,7 @@
 
 \title{Resubmission file}
 \subtitle{Simultaneous Elicitation of Scoring Rule and Agent Preferences for Robust Winner Determination}
-\author{Submission ID: TODO}
+\author{Submission ID: 3177}
 \date{}
 \hypersetup{
 	pdfsubject={Cover letter},
@@ -28,13 +28,15 @@
 \begin{document}
 \maketitle
 
+\tableofcontents
+
 \section{Summary of previous criticisms and our corrections}
 \commentOC{See \href{https://ijcai-21.org/cfp/}{CFP, Resubmissions}.}
 
 Dear editors and reviewers,
 
 \medskip
-We have submitted this article for the first time to IJCAI 2020 (TODO ID?). The submission was evaluated by four reviewers; the overall assessment (full reviews are included in Section \ref{sec:reviews-ijcai}) were: 
+We have submitted this article for the first time to IJCAI 2020 (with submission ID 7094). The submission was evaluated by four reviewers; the overall assessment (full reviews are included in Section \ref{sec:reviews-ijcai}) were: 
 \begin{itemize}
 \item R1: Accept {\em (good paper, I can argue for accepting it)};
 \item R2: Weak accept {\em (marginally above the acceptance theshold, rejecting it would not be that bad)};
@@ -152,7 +154,11 @@ There are some other issues, pointed out by the reviewers. The discussion of the
 
 Because of these issues, I'm recommending rejection of the paper. However, I think after some further work on the paper there's a reasonable chance that it could be accepted for another high quality conference.
 
-\section{Submission to AAMAS-2021} 
+\section{Rejected paper IJCAI 2020}
+You will find here below the version of this article that was submitted to IJCAI 2020.
+\includepdf[pages=-]{ijcai20_paper_7094.pdf}
+
+\section{Submission to AAMAS 2021} 
 \label{sec:reviews-aamas}
 \subsection{Review 1}
 \subsubsection*{Summary:}	The authors use the notion of minimax regret to guide the process of preference elicitation in an election (they elicit both the voters' preferences and the preferences of the chair regarding the scoring rule used). The authors show that the methodology of Lu and Boutilier for computing minimax regret still applies in their setting and present some experimental results.
@@ -355,5 +361,5 @@ Reviewer 3 Question1: We did not investigate a systematic way of mixing strategi
 
 \section{Rejected paper AAMAS 2021}
 You will find here below the version of this article that was submitted to AAMAS 2021.
-%\includepdf[pages=-]{aamas21_paper_554.pdf}
+\includepdf[pages=-]{aamas21_paper_554.pdf}
 \end{document}
