--- a/minimax.tex
+++ b/minimax.tex
@@ -42,17 +42,19 @@
 
 %%% Provide names, affiliations, and email addresses for all authors.
 
-\author{
-	Beatrice Napolitano$^1$\footnote{Contact Author}\and
-	Olivier Cailloux$^1$\and
-	Paolo Viappiani$^2$\\
-	\affiliations
-	$^1$Université Paris-Dauphine, Université PSL, CNRS, LAMSADE\\
-	$^2$LIP6, UMR 7606, CNRS and Sorbonne Universit\'e\\
-	\emails
-	\{beatrice.napolitano, olivier.cailloux\}@dauphine.fr,
-	paolo.viappiani@lip6.fr
-}
+\author{ID: 3177}
+
+%\author{
+%	Beatrice Napolitano$^1$\footnote{Contact Author}\and
+%	Olivier Cailloux$^1$\and
+%	Paolo Viappiani$^2$\\
+%	\affiliations
+%	$^1$Université Paris-Dauphine, Université PSL, CNRS, LAMSADE\\
+%	$^2$LIP6, UMR 7606, CNRS and Sorbonne Universit\'e\\
+%	\emails
+%	\{beatrice.napolitano, olivier.cailloux\}@dauphine.fr,
+%	paolo.viappiani@lip6.fr
+%}
 
          
 \newcommand{\BibTeX}{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em\TeX}
