--- a/minimax.tex
+++ b/minimax.tex
@@ -75,19 +75,19 @@ This assumption of full preference information has recently been questioned by a
 In this paper we argue that in many situations one should consider as well the voting rule to be 	partially specified.
 %	This article goes one step further by tackling one important new case, namely, when both the voting rule and the agents preferences are partially known. It also permits to obtain a progressively refined recommendation without requiring to achieve full knowledge of either sort of information.
 %This is useful because providing such information is often costly: the chair may find it hard to specify a rule completely; agents may need time to form reflective preferences.	
-	Focusing on positional scoring rules, we assume that the chair, while not able to give a precise definition of the rule, is capable of answering simple questions requiring to pick a winner from a specific example profile. In addition, we assume that the agent preferences have to be elicited as well and are acquired by asking comparison queries. 
+	Focusing on positional scoring rules, we assume that the chair, while not able to give a precise definition of the rule, is capable of answering simple questions requiring to pick a winner from a concrete profile. In addition, we assume that the agent preferences also have to be elicited. %and are acquired by asking comparison queries. 
 	We propose a method for robust approximate winner determination and interactive elicitation based on minimax regret; we develop several strategies for choosing the questions to ask to  the chair and the agents in order to %acquire the most relevant information for
 converge quickly to a near-optimal alternative. Finally, we analyze these strategies in experiments %in order to validate our approach
  %focusing on settings 
- where the voting rule and the preferences are simultaneously elicited.
+ where the  rule and the preferences are simultaneously elicited.
  %and obtain practical guidelines.
 \end{abstract}
 
 \section{Introduction}
 Aggregation of preference information is a central task in many computer systems (recommender systems, search engines, etc).
-In many situations, such as in group recommender systems, the goal is to find a consensus choice.
+In many situations, such as in group recommender systems, the goal is to find a consensus choice;
 %It is therefore natural to look at methods from social choice and see how they can be adapted for group decision-making in a computerized setting.
-Methods from social choice can be adapted for group decision-making in a computerized setting.
+social choice theory can provide foundations for such applications. %Methods from social choice can be adapted for group decision-making in a computerized setting.
 
 The traditional approach to social choice assumes that both the social choice function and the full preference orderings of the agents (voters) are expressed beforehand. These represent two strong hypothesis.
 Requiring agents to express full preference orderings can be prohibitively costly (in terms of cognitive and communication cost).
@@ -126,23 +126,27 @@ We compare the effectiveness of several strategies  including strategies that pr
 
 \paragraph{Related Work}
 \label{sec:related}
-In the context of social choice, several authors have been interested in obtaining information about winners with reduced assumptions about the knowledge of the agent preferences (assuming that the voting rule is known). One early work is  by \Citet{Conitzer2005} who studied the complexity of communication, using different voting rules, determining lower and upper bounds; they showed that, in the worst case, the agents should send their complete set of preference for several rules. 
+In the context of social choice, several authors have been interested in obtaining information about winners with reduced assumptions about the knowledge of the agent preferences (assuming that the voting rule is known). One early work is  by \Citet{Conitzer2005} who studied the complexity of communication, using different voting rules; %determining lower and upper bounds;
+%they showed that, 
+in the worst case, the agents should send their complete set of preference for several rules. 
+\Citet{Konczak05} studied the computation of possible and necessary winners in the case of partial knowledge of agent preferences, for various voting rules; %and showed that the problem is hard in the general case.
+\citet{Xia2008} then showed that, while the identification of a necessary co-winner in scoring rules is polynomial,  the determination of possible co-winners is NP-hard; they also  proposed polynomial-time algorithms when using maximin and Bucklin.
+\citep{Walsh2007} showed that the general case remains computationally hard even when restricting to single-peaked preferences \citep{Walsh2007};  sufficient conditions that ensure tractability were then found \citep{Pini2007}.
 
-\Citet{Konczak05} studied the computation of possible and necessary winners in the case of partial knowledge of agent preferences, for various voting rules, and showed that the problem is hard in the general case.
-This work was then extended by \citet{Xia2008} who showed that, while the identification of a necessary co-winner in scoring rules is polynomial,  the determination of possible co-winners is NP-hard; they also  proposed polynomial-time algorithms when using maximin and Bucklin.
-In other papers it was showed that the general case remains computationally hard even when restricting to single-peaked preferences \citep{Walsh2007};  sufficient conditions that ensure tractability were then found \citep{Pini2007}.
 
-
-Thereafter, noticing that in many practical situations there would be too many possible winners but no necessary winners, the importance of proposing efficient elicitation strategies has been identified. 
-Several works addressed the problem of  elicitation of agent preferences \citep{Naamani-Dery2015,Kalech2011,Lu2011,Pini2009,Benabbou2016,Dey2016,Dey2016_2} using a variety of approaches (minimax regret, Bayesian methods, etc.), and others \citep{Walsh2009,Conitzer2009}  analyzed when to stop the elicitation process.
+Since in many practical situations there would be too many possible winners but no necessary winners, %several authors proposed elicitation methods of agent preferences. 
+several works addressed the problem of  elicitation of agent preferences \citep{Naamani-Dery2015,Kalech2011,Lu2011,Pini2009,Benabbou2016,Dey2016,Dey2016_2}  using a variety of approaches (minimax regret, Bayesian methods, etc.), with the goal of converging to a necessary winners; \citep{Walsh2009,Conitzer2009}  analyzed when to stop the elicitation process.
 
 While most of the focus in the research community has been in dealing with incomplete agent preferences, 
-another line of research has dealt with scenarios where it is instead the voting rule that is partially defined, but the preferences are given. 
-A classic paper is the one by \citet{Stein1994} that, considering scoring rules, identified dominance relations between alternatives; these relations allow to determine pairs of alternatives where the first is at least as good as the second no matter which weights are chosen among a generic class of weights (decreasing weighs or convex decreasing weights).
-More recent articles considered the problem of dealing with unspecified weights in positional scoring rules: \citet{Llamazares2013} proposed a method based on Data Envelopment Analysis (DEA), while \citet{Viappiani2018} proposed to aggregate the uncertainty in weights using criteria used in decision-making under uncertainty (such as minimax regret). 
-\Citet{Cailloux2014} are interested in elicitation of a different class of rules.
+another line of research \citep{Stein1994,Llamazares2013,Viappiani2018} has dealt with %scenarios where it is instead the voting rule that is partially defined. % but the preferences are given. 
+a  partially defined voting rule.
+%A classic paper is the one by \citet{Stein1994} that, considering scoring rules, identified dominance relations between alternatives; these relations allow to determine pairs of alternatives where the first is at least as good as the second no matter which weights are chosen among a generic class of weights (decreasing weighs or convex decreasing weights).
+%More recent articles considered the problem of dealing with unspecified weights in positional scoring rules: \citet{Llamazares2013} proposed a method based on Data Envelopment Analysis (DEA), while \citet{Viappiani2018} proposed to aggregate the uncertainty in weights using criteria used in decision-making under uncertainty (such as minimax regret). 
+\Citet{Cailloux2014} provided an elicitation framework for a different class of rules.
 
-Finally, we mention works related to the manipulability of voting rules \citep{Elkind2012,Dey2018,Dey2018_2,Conitzer2011,Baumeister2019}, and studies of strategic behaviors, when agents learn incrementally about other agent preferences \citep{Endriss2016,Lev2019,Annemieke2012}.
+Finally, we mention works addressing the manipulability of voting rules \citep{Elkind2012,Dey2018,Dey2018_2,Conitzer2011,Baumeister2019}, and studies of strategic behaviors
+% when agents learn incrementally about other agent preferences
+ \citep{Endriss2016,Lev2019,Annemieke2012}.
 
 \section{Social choice with partial information}
 \label{sec:background}
@@ -740,7 +744,8 @@ suggest that regret-based elicitation is effective and allows to quickly reduce 
 %regret, but they also show that starting with zero knowledge became a pretentious approach really quickly when increasing the size of the problem. Future works will therefore include the test of these strategies on partial specified profiles, ideally on real datasets. An other important direction is the extension to voting rules beyond scoring rules.
 %Regret-based elicitation allows to determine near-optimal winners using only few information about the agent preferences.
 
-As part of the contribution of this work, we publish an open-source library that allows to reproduce our experiments, and serve as a basis for further research (url not displayed for anonymity reasons).
+An open-source library, allowing to reproduce our experiments, will be made publicly available.\footnote{URL not displayed for anonymity reasons.}
+%and serve as a basis for further research
 
 We mention some directions for future works.
 Further development of elicitation strategies, considering alternative heuristics, is an important direction. 
